# truthlens-v2

./: .gitattributes  .gitignore  .replit  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  aggregation_audit.md  analysis_audit.md  api_test.py  app.py  colab_requirements.txt  convert_to_hf.py  data_audit.md  data_fix.py  docker-compose.yml  evaluation_audit.md  explainability_audit.md  features.md  features_audit.md  frontend.md  graph_audit.md  inference_audit.md  main.py  models.md  models_audit.md  pyproject.toml  replit.md  requirements-dev.txt  requirements.txt  run_eda.py  run_test_pipeline.py  save.txt  setup.py  src_structure.md  structure.md  test.py  training.md  training_audit.md  (+3 more)
.agents/: agent_assets_metadata.toml
Truthlens-Ai-main/: .replit
api/: app.py
attached_assets/: Pasted--Aggregation-Engine-v2-Learned-Hybrid-Scoring-System-1-_1777783928324.txt  Pasted--Architecture-Specification-Interacting-Multi-Task-Mode_1777783214769.txt  Pasted--Explainability-v2-Inference-v2-Unified-Cross-Task-Low-_1777786143159.txt  Pasted--FINAL-CRASH-Root-Cause-RuntimeError-unscale-has-alread_1777525846099.txt  Pasted--Now-this-is-a-proper-working-pipeline-run-but-you-ve-r_1777612349934.txt  Pasted--Prompt-Upgrade-Dataset-to-Semantically-Aligned-Multi-T_1777781020698.txt  Pasted--Prompt-Upgrade-Multi-Task-Model-to-Interacting-Heads-U_1777781749034.txt  Pasted--TRUTHLENS-AGGREGATION-LAYER-AUDIT-PROMPT-v8-NUMERICAL-_1777276380179.txt  Pasted--TRUTHLENS-AGGREGATION-LAYER-AUDIT-PROMPT-v8-NUMERICAL-_1777306775793.txt  (+111 more)
config/: aggregation.yaml  config.yaml  (+1 more)
(+478 files in other folders)
